--- a/frontend/src/Navbar/Auth/Auth.css
+++ b/frontend/src/Navbar/Auth/Auth.css
@@ -1,23 +1,27 @@
 .Auth {
-  max-width: 28rem;
-	padding: 1.5rem 2rem;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  background-color: rgb(26, 26, 27);
+  padding: 1.5rem 2rem;
+  width: 20rem;
+}
+.Auth-Title {
+  color: white;
+  font-size: 2rem;
+  font-weight: 600;
 }
 .Auth-Form {
   display: flex;
   flex-direction: column;
 }
-.Auth-Title {
-  font-size: 2rem;
-  font-weight: 600;
-}
 .Auth-Input {
   margin-top: 1rem;
   font-size: 1rem;
   padding: 0.75rem 1.25rem;
-  border: none;
   border-radius: 2rem;
-  background: #f1f5f8;
+  border-color: rgb(52, 53, 54);
+  border-width: 1px;
+  color: white;
+  background-color: rgb(26, 26, 27);
+  outline: none;
 }
 .Auth-Submit {
   margin-top: 1rem;
