--- a/frontend/src/Navbar/Navbar.css
+++ b/frontend/src/Navbar/Navbar.css
@@ -2,3 +2,10 @@
   display: flex;
   justify-content: space-between;
 }
+
+.NavBar-DropDown {
+  display: block;
+  position: absolute;
+  background-color: #f9f9f9;
+  right: 0;
+}
