add css variables

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  --dark-gray: rgb(26, 26, 27);
+  --light-gray: rgb(52, 53, 54);
+  --lightest-gray: rgb(129, 131, 132);
+}
 body {
   background-color: black;
   margin: 0;
