--- a/frontend/src/Navbar/Navbar.css
+++ b/frontend/src/Navbar/Navbar.css
@@ -1,17 +1,16 @@
 .NavBar {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px;
-  background-color: rgb(26, 26, 27);
-  border-color: rgb(52, 53, 54);
+  border-bottom: 1px solid;
+  background-color: var(--dark-gray);
+  border-color: var(--light-gray);
   padding: 0.5rem;
 }
 .NavBar-DropDown {
   display: block;
   position: absolute;
-  background-color: #f9f9f9;
   right: 0;
-  top: 2.75rem;
+  top: 2.8rem;
 }
 .NavBar-Auth {
   display: flex;
@@ -19,8 +18,8 @@
 }
 
 .NavBar-LogInButton {
-  color: rgb(215, 218, 220);
-  border-color: rgb(215, 218, 220);
+  color: white;
+  border-color: white;
   border-radius: 0.25rem;
   border: 1px solid;
   padding: 0.25rem 1rem;
@@ -29,8 +28,8 @@
 
 .NavBar-SignUpButton {
   margin-left: 0.5rem;
-  color: rgb(26, 26, 27);
-  background-color: rgb(215, 218, 220);
+  color: var(--dark-gray);
+  background-color: white;
   border-radius: 0.25rem;
   padding: 0.25rem 1rem;
   cursor: pointer;
