--- a/frontend/src/Navbar/Navbar.css
+++ b/frontend/src/Navbar/Navbar.css
@@ -1,10 +1,16 @@
 .NavBar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid;
   background-color: var(--dark-gray);
   border-color: var(--light-gray);
   padding: 0.5rem;
+}
+.NavBar-Home {
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
 }
 .NavBar-DropDown {
   display: block;
@@ -16,7 +22,6 @@
   display: flex;
   flex-direction: row;
 }
-
 .NavBar-LogInButton {
   color: white;
   border-color: white;
@@ -25,7 +30,6 @@
   padding: 0.25rem 1rem;
   cursor: pointer;
 }
-
 .NavBar-SignUpButton {
   margin-left: 0.5rem;
   color: var(--dark-gray);
