--- a/frontend/src/shared/components/UIElements/LoadingSpinner.css
+++ b/frontend/src/shared/components/UIElements/LoadingSpinner.css
@@ -1,3 +1,7 @@
+.LoadingSpinner {
+  width: 64px;
+}
+
 .lds-dual-ring {
   display: inline-block;
   width: 64px;
@@ -5,7 +9,7 @@
 }
 
 .lds-dual-ring:after {
-  content: ' ';
+  content: " ";
   display: block;
   width: 46px;
   height: 46px;
@@ -14,18 +18,6 @@
   border: 5px solid #510077;
   border-color: #510077 transparent #510077 transparent;
   animation: lds-dual-ring 1.2s linear infinite;
-}
-
-.loading-spinner__overlay {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(255, 255, 255, 0.9);
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 @keyframes lds-dual-ring {
