rename gray variables

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --dark-gray: rgb(26, 26, 27);
-  --light-gray: rgb(52, 53, 54);
-  --lightest-gray: rgb(129, 131, 132);
+  --gray: rgb(52, 53, 54);
+  --light-gray: rgb(129, 131, 132);
 }
 body {
   background-color: black;
