--- a/frontend/src/shared/components/Navbar/Navbar.css
+++ b/frontend/src/shared/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   align-items: center;
   border-bottom: 1px solid;
   background-color: var(--dark-gray);
-  border-color: var(--light-gray);
+  border-color: var(--gray);
   padding: 0.5rem;
 }
 .NavBar-Home {
