--- a/frontend/src/Posts/components/Comment.css
+++ b/frontend/src/Posts/components/Comment.css
@@ -4,12 +4,12 @@
 .Comment__Username {
   display: inline-block;
   text-decoration: none;
-  color: white;
+  color: var(--light-white);
   margin-bottom: 0.25rem;
 }
 .Comment__Username:hover {
   text-decoration: underline;
 }
 .Comment__Comment {
-  color: white;
+  color: var(--light-white);
 }
