--- a/frontend/src/shared/components/Card/Card.css
+++ b/frontend/src/shared/components/Card/Card.css
@@ -29,12 +29,12 @@
   text-decoration: underline;
 }
 .Card-Title {
-  color: white;
+  color: var(--light-white);
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
 }
 .Card-Description {
-  color: white;
+  color: var(--light-white);
   margin-bottom: 0.5rem;
 }
 .Card-NumComments {
