--- a/frontend/src/shared/components/Navbar/Auth/Auth.css
+++ b/frontend/src/shared/components/Navbar/Auth/Auth.css
@@ -8,10 +8,16 @@
   color: var(--light-white);
   font-size: 2rem;
   font-weight: 600;
+  margin-bottom: 0.25rem;
 }
 .Auth-Form {
   display: flex;
   flex-direction: column;
+}
+.Auth-Input {
+  font-size: 1.25rem;
+  margin-bottom: 0.25rem;
+  background-color: var(--light-white);
 }
 .Auth-Submit {
   margin-top: 1rem;
