--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,3 +21,15 @@ body {
 * {
   font-family: "IBM Plex Sans", Arial, sans-serif;
 }
+.Blue-Button {
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: none;
+  color: var(--light-white);
+  background: #148cb8;
+  outline: none;
+}
