--- a/frontend/src/Posts/components/Comment.scss
+++ b/frontend/src/Posts/components/Comment.scss
@@ -4,12 +4,9 @@
 .Comment__Username {
   display: inline-block;
   text-decoration: none;
-  color: var(--light-white);
+  color: var(--light);
   margin-bottom: 0.25rem;
   &:hover {
     text-decoration: underline;
   }
-}
-.Comment__Comment {
-  color: var(--light-white);
 }
