--- a/frontend/src/Posts/components/CommentForm.scss
+++ b/frontend/src/Posts/components/CommentForm.scss
@@ -3,7 +3,7 @@
   resize: vertical;
   background-color: var(--dark-gray);
   border: 1px solid var(--gray);
-  color: var(--light-white);
+  color: var(--light);
   min-height: 5rem;
   height: auto;
   margin-bottom: 0.25rem;
