--- a/frontend/src/shared/components/Card/Card.scss
+++ b/frontend/src/shared/components/Card/Card.scss
@@ -29,12 +29,12 @@
   }
 }
 .Card-Title {
-  color: var(--light-white);
+  color: var(--light);
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
 }
 .Card-Description {
-  color: var(--light-white);
+  color: var(--light);
   margin-bottom: 0.5rem;
 }
 .Card-NumComments {
