--- a/frontend/src/shared/components/Navbar/Auth/Auth.scss
+++ b/frontend/src/shared/components/Navbar/Auth/Auth.scss
@@ -6,7 +6,7 @@
   border: 1px solid var(--gray);
 }
 .Auth-Title {
-  color: var(--light-white);
+  color: var(--light);
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 0.25rem;
@@ -18,7 +18,7 @@
 .Auth-Input {
   font-size: 1.25rem;
   margin-bottom: 0.25rem;
-  background-color: var(--light-white);
+  background-color: var(--light);
 }
 .Auth-Submit {
   margin-top: 1rem;
