--- a/frontend/src/shared/components/Navbar/Navbar.scss
+++ b/frontend/src/shared/components/Navbar/Navbar.scss
@@ -9,7 +9,7 @@
 }
 .NavBar-Home {
   text-decoration: none;
-  color: var(--light-white);
+  color: var(--light);
   font-size: 1.5rem;
 }
 .NavBar-DropDown {
