--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -53,3 +53,24 @@ body {
 .text-light {
   color: var(--light);
 }
+.Form {
+  background-color: var(--dark-gray);
+  padding: 1.5rem 2rem;
+  border-radius: 0.25rem;
+  border: 1px solid var(--gray);
+}
+.Form-Title {
+  color: var(--light);
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 0.25rem;
+}
+.Form-Form {
+  display: flex;
+  flex-direction: column;
+}
+.Form-Input {
+  font-size: 1.25rem;
+  margin-bottom: 0.25rem;
+  background-color: var(--light);
+}
