--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -49,6 +49,7 @@ body {
   background-color: var(--light);
 }
 .btn-outline-light {
+  background-color: var(--dark-gray);
   color: var(--light);
   border: 1px solid;
   border-color: var(--light);
