refactor comment css

--- a/frontend/src/styles/_utilities.scss
+++ b/frontend/src/styles/_utilities.scss
@@ -8,9 +8,14 @@
 .d-block {
   display: block;
 }
+/* MARGIN */
 .ml-1 {
   margin-left: 0.25rem;
 }
+.mb-3 {
+  margin-bottom: 1rem;
+}
+/* PADDING */
 .p-3 {
   padding: 1rem;
 }
