--- a/frontend/src/shared/components/Card/Card.scss
+++ b/frontend/src/shared/components/Card/Card.scss
@@ -25,6 +25,8 @@
   }
 }
 .Card__Title {
+  display: block;
+  text-decoration: none;
   color: var(--light);
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
